--- a/.github/workflows/commits.yml
+++ b/.github/workflows/commits.yml
@@ -10,9 +10,14 @@ on:
 jobs:
   Discord_Notification:
     runs-on: ubuntu-latest
+    env:
+      CF_API_KEY: ${{ secrets.CF_API_KEY }}
+      # WOWI_API_TOKEN: ${{ secrets.WOWI_API_TOKEN }}
+      # GITHUB_OAUTH: ${{ secrets.GITHUB_TOKEN }}
+      WAGO_API_TOKEN: ${{ secrets.WAGO_API_TOKEN }}
     steps:
     - name: Checkout Repository
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
     - name: Set enviroment
       shell: bash
       run: |
@@ -24,3 +29,5 @@ jobs:
         webhook: ${{ secrets.DISCORD_COMMITS_WEBHOOK }}
         message: "\u200B"
         embed: '{"title": "**{{ commit.title }}**","description": "{{ commit.description }}\u200B","author": {"name": "{{ commit.author.username }}","icon_url": "https://github.com/{{ commit.author.username }}.png","url": "https://github.com/{{ commit.author.username }}"},"image": {"url": "https://repository-images.githubusercontent.com/482364703/3140862c-8faf-45cd-bd5f-7f62968dbd23"},"fields": [{"name": "AddOn","value": "[{{ github.context.payload.repository.name}}]({{ github.context.payload.repository.html_url }})","inline": true},{"name": "Branch","value": "${{ env.branch }}","inline": true},{"name": "SHA","value": "[${{ env.sha_short }}]({{ commit.url }})","inline": true},{"name": "Diff","value": "[Show Diff]({{ github.context.payload.compare }})","inline": true}]}'
+    - name: Package and release
+      uses: BigWigsMods/packager@master
