--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   release:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     env:
       CF_API_KEY: ${{ secrets.CF_API_KEY }}
       CF_URL: https://www.curseforge.com/wow/addons/cataarmory-elvui-plugin
